# jsonr

./: .gitignore  CMakeLists.txt  README.md  uninstall.sh
data/: complex.json
src/: json.cpp  json.hpp  jsonr.hpp  load.cpp  parser.cpp  parser.hpp  parsestream.cpp  parsestream.hpp  streamutils.cpp  streamutils.hpp  testing.cpp
src/cmake/: Findjsonr.cmake
src/jsonr/: json.cpp  json.hpp  load.cpp  load.hpp  parseexception.cpp  parseexception.hpp  parser.cpp  parser.hpp  parsestream.cpp  parsestream.hpp  streamutils.cpp  streamutils.hpp
src/testing/: 00.cpp  00.hpp  01.cpp  01.hpp  02.cpp  02.hpp  03.cpp  03.hpp  04.cpp  04.hpp  05.cpp  05.hpp  testing.cpp  utils.cpp  utils.hpp
